Category, Tournament, Season, Round, Match 배치 데이터 저장 개발