@@ -4,10 +4,12 @@ import com.tennisfolio.Tennisfolio.infrastructure.api.base.StrategyApiTemplate;
 import com.tennisfolio.Tennisfolio.infrastructure.api.match.leagueEventsByRound.LeagueEventsByRoundDTO;
 import com.tennisfolio.Tennisfolio.match.domain.Match;
 import com.tennisfolio.Tennisfolio.infrastructure.repository.RoundJpaRepository;
+import com.tennisfolio.Tennisfolio.match.repository.MatchRepository;
 import com.tennisfolio.Tennisfolio.round.repository.RoundRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -15,25 +17,43 @@ import java.util.stream.Stream;
 public class MatchSyncService {
 
     private final RoundRepository roundRepository;
+    private final MatchRepository matchRepository;
     private final StrategyApiTemplate<List<LeagueEventsByRoundDTO>,List<Match>> leagueEventsByRoundTemplate;
 
-    public MatchSyncService(RoundRepository roundRepository, StrategyApiTemplate<List<LeagueEventsByRoundDTO>, List<Match>> leagueEventsByRoundTemplate) {
+    public MatchSyncService(RoundRepository roundRepository, MatchRepository matchRepository, StrategyApiTemplate<List<LeagueEventsByRoundDTO>, List<Match>> leagueEventsByRoundTemplate) {
         this.roundRepository = roundRepository;
+        this.matchRepository = matchRepository;
         this.leagueEventsByRoundTemplate = leagueEventsByRoundTemplate;
     }
 
-    public List<Match> saveMatchList() {
-        return roundRepository.findAll()
+    public void saveMatchList() {
+        Set<String> existingKeys = matchRepository.findAllRapidIds();
+        
+        roundRepository.findAll()
                 .stream()
-                .map(round -> {
-                    String rapidTournamentId = round.getSeason().getTournament().getRapidTournamentId();
-                    String rapidSeasonId = round.getSeason().getRapidSeasonId();
-                    Long roundNum = round.getRound();
-                    String slug = round.getSlug();
+                .forEach(round -> {
+                    try{
+                        String rapidTournamentId = round.getSeason().getTournament().getRapidTournamentId();
+                        String rapidSeasonId = round.getSeason().getRapidSeasonId();
+                        Long roundNum = round.getRound();
+                        if(round.getSlug() == null) return;
+                        String slug = round.getSlug();
 
-                    return leagueEventsByRoundTemplate.execute(rapidTournamentId, rapidSeasonId, roundNum, slug);
-                }).flatMap(list -> list != null ? list.stream() : Stream.empty())
-                .collect(Collectors.toList());
+                        List<Match> matches =  leagueEventsByRoundTemplate.execute(rapidTournamentId, rapidSeasonId, roundNum, slug);
+                        List<Match> newMatches = matches.stream()
+                                .filter(match -> !existingKeys.contains(match.getRapidMatchId()))
+                                .toList();
+
+                        matchRepository.collect(newMatches);
+                        matchRepository.flushWhenFull();
+                    }catch(Exception e){
+                        e.printStackTrace();
+                    }
+
+                });
+
+        matchRepository.flushAll();
+
 
     }
 }
